--- a/packages/index.html
+++ b/packages/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>uHost</title>
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../favicon.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../shared.css">
@@ -18,6 +18,11 @@
   <div class="background"></div>
   <header class="main-header">
     <div>
+      <button class="toggle-button">
+        <span class="toggle-button__bar"></span>
+        <span class="toggle-button__bar"></span>
+        <span class="toggle-button__bar"></span>
+      </button>
       <a href="../index.html" class="main-header__brand">
         <img src="../images/uhost-icon.png" alt="uHost - Your favorite hosting company">
       </a>
@@ -36,6 +41,19 @@
       </ul>
     </nav>
   </header>
+  <nav class="mobile-nav">
+    <ul class="mobile-nav__items">
+      <li class="mobile-nav__item">
+        <a href="index.html">Packages</a>
+      </li>
+      <li class="mobile-nav__item">
+        <a href="../customers/index.html">Customers</a>
+      </li>
+      <li class="mobile-nav__item mobile-nav__item--cta">
+        <a href="../start-hosting/index.html">Start Hosting</a>
+      </li>
+    </ul>
+  </nav>
   <main>
     <section class="package" id="plus">
       <a href="#">
@@ -74,6 +92,7 @@
       </ul>
     </nav>
   </footer>
+  <script src="../shared.js"></script>
 </body>
 
 </html>
